# reid_hota

./: .gitignore  README.md  main.py  pyproject.toml
examples/: meva_rev2.py  test_codetr.py
examples/comp/: 2018-03-11.11-20-00.11-25-00.admin.G329.r13.csv  2018-03-11.11-20-00.11-25-00.school.G336.r13.csv
examples/ref/: 2018-03-11.11-20-00.11-25-00.admin.G329.r13.csv  2018-03-11.11-20-00.11-25-00.school.G336.r13.csv
src/reid_hota/: __init__.py  config.py  constants.py  cost_matrix.py  fast_hota.py  fast_hota_utils.py  hota_data.py  hota_errors.py  hota_utils.py  reid_hota.py  sparse_matrix.py
tests/: meva_rev2.py  test_fast_hota.py  test_meva_reid_long.py  test_meva_reid_short.py  test_utils.py
tests/data/meva_rid_short/: results_frame_id_alignment.json  results_global_id_alignment.json  results_video_id_alignment.json
tests/data/meva_rid_short-old/: results_global_id_alignment.json
tests/data/meva_rid_short-old/comp/: 2018-03-11.11-20-00.11-25-00.school.G336.r13.csv  2018-03-11.11-25-01.11-30-01.admin.G326.r13.csv  2018-03-11.11-30-01.11-35-01.school.G638.r13.csv  2018-03-11.11-50-00.11-55-00.school.G419.r13.csv  2018-03-11.13-55-01.14-00-01.school.G328.r13.csv  2018-03-11.16-40-02.16-45-02.school.G424.r13.csv
tests/data/meva_rid_short-old/ref/: 2018-03-11.11-20-00.11-25-00.school.G336.r13.csv  2018-03-11.11-50-00.11-55-00.school.G419.r13.csv  2018-03-11.13-55-01.14-00-01.school.G328.r13.csv  2018-03-11.14-05-01.14-10-01.school.G421.r13.csv  2018-03-11.16-15-01.16-20-01.school.G339.r13.csv
(+30 files in other folders)
