[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reid_hota"
dynamic = ["version"]
description = "Modified HOTA (Higher Order Tracking Accuracy) extended for ReID evaluation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "scipy>=1.15.3",
]

[tool.hatch.version]
path = "src/reid_hota/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/reid_hota"]

[tool.pytest.ini_options]
addopts = ["-s"]